@@ -1,3 +1,7 @@
+2007-06-12  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/gpgwrap.c (main): Call _spawnv, not execv.
+
 2007-05-25  Marcus Brinkmann  <marcus@g10code.de>
 
 	* src/uninst-gnupg.nsi: Fix path of gpgkeys helper programs.
